<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HelloWorld</string>
    <string name="title_activity_display_message">Message</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_test">Test</string>
    <string name="label_1">test1</string>
    <string name="label_2">test2</string>
    <string name="label_3">test3</string>
    <string name="label_4">test4</string>
    <string name="label_5">test5</string>
    <string name="button_ensure">regist</string>
    <string name="button_cancel">cancel</string>
    <string name="setting_info">setinfo</string>
    <string name="date_pick">pick date</string>
    <string name="action_search">search</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>

</resources>
