<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_popup_setting"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/label_1"/>

        <EditText
            android:id="@+id/label_1_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:maxLines="1"
            android:maxLength="20"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/label_2"/>
        <EditText
            android:id="@+id/label_2_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:maxLines="1"
            android:maxLength="20"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/label_3"/>
        <EditText
            android:id="@+id/label_3_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:maxLines="1"
            android:maxLength="20"
            android:gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/label_4"/>
        <EditText
            android:id="@+id/label_4_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:maxLines="1"
            android:maxLength="20"
            android:gravity="center_horizontal"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/label_5"/>
        <TextView
            android:id="@+id/label_5_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:text="@string/date_pick" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/button_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/button_ensure" />
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/button_regist"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/button_cancel" />

    </RelativeLayout>

</LinearLayout>
